# mdref

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENCE  LICENSE  README.md  cliff.toml  dist-workspace.toml  prek.toml
.agents/skills/mdref-contribution-flow/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  refactor.yml
.github/hooks/: rtk.json
.github/instructions/: Base.instructions.md  Project.instructions.md
.github/workflows/: ci.yml
benches/: benchmark.rs  mock_generator.rs
benches/support/: mod.rs
doc/: Benchmarking.md  DESIGN.md  DirectoryMove.md  Improvements.md  ProjectAssessment.md  ProjectReview-2026-04-25.md  TESTING.md  TestImprovementChecklist.md  TestReview.md  Testing.md  architecture.md  build_sizes.csv  find.md
doc/data/: build_sizes.csv
docs/: find.md
examples/: main.md  other.md  renamed_main.md
examples/inner/: main.md  other.md
examples/inner/sub/: main.md  other.md
examples/other/: other.md
examples/other/sub/: other.md
script/: before_commit.sh  bench.sh  init.sh  precheck.sh  record_build_size.sh  update_version.sh
script/hooks/: rtk-rewrite.sh
scripts/: before_commit.sh  before_update.sh  bench.sh  init.sh  precheck.sh  record_build_size.sh  release_prepare.sh  update_version.sh
src/: commands.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/commands/: find.rs  mod.rs  mv.rs  progress.rs  rename.rs
src/core/: find.rs  mod.rs  mv.rs  pathdiff.rs  progress.rs  reference.rs  rename.rs  util.rs
src/core/model/: link_replacement.rs  mod.rs  move_preview.rs  move_transaction.rs  reference.rs
src/core/mv/: apply.rs  case_only.rs  mod.rs  plan.rs  preview.rs  validate.rs
tests/: bench_fixture_tests.rs  bench_script_tests.rs  cli_tests.rs  error_tests.rs  lib_find_tests.rs  lib_mv_tests.rs  lib_rename_tests.rs
tests/common/: mod.rs
