[package]
name = "mdref"
version = "0.3.1"
edition = "2024"
authors = ["Student Wei <studentweis@gmail.com>"]
repository = "https://github.com/studentweis/mdref"
description = "Markdown Reference finding and migration tool."
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
walkdir = "2.3"
regex = "1.11.3"
rayon = "1.11.0"
pathdiff = "0.2"

[dev-dependencies]
criterion = "0.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "benchmark"
harness = false
