[package]
name = "mdref"
version = "0.4.2"
edition = "2024"
authors = ["Student Wei <studentweis@gmail.com>"]
repository = "https://github.com/studentweis/mdref"
description = "Markdown Reference finding and migration tool."
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
walkdir = "2.3"
comrak = "0.51"
rayon = "1.11.0"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.19"
rstest = "0.26.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.release]
tag-name = "{{version}}"
