[package]
name = "mdref"
version = "0.4.3"
edition = "2024"
authors = ["Student Wei <studentweis@gmail.com>"]
repository = "https://github.com/studentweis/mdref"
description = "Markdown Reference finding and migration tool."
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
walkdir = "2.5.0"
ignore = "0.4.25"
comrak = "0.52.0"
rayon = "1.12.0"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.27.0"
rstest = "0.26.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.release]
tag-name = "{{version}}"
pre-release-commit-message = "chore(release): release {{crate_name}} {{version}}"
pre-release-hook = ["bash", "scripts/release_prepare.sh"]

[[package.metadata.release.pre-release-replacements]]
file = "README.md"
search = 'releases/download/[^/]+'
replace = "releases/download/{{tag_name}}"
min = 2
